@@ -3,4 +3,5 @@
 
 test-consumer
 test-publisher
+list-resources
 server-credentials
